Name:            MonadCatchIO-transformers
Version:         0.0.1.0
Cabal-Version:   >= 1.2
License:         PublicDomain
Description:
  Provides a monad-transformer version of the @Control.Exception.catch@
  function. For this, it defines the @MonadCatchIO@ class, a subset of
  @MonadIO@. It defines proper instances for most monad transformers in
  the 'transformers' library.
Maintainer:      ariep@xs4all.nl
Category:        Control
Synopsis:        Monad-transformer version of the Control.Exception module
Build-Type:      Simple

Library
  Build-Depends:
    base >= 4 && < 5,
    extensible-exceptions,
    transformers
  Exposed-Modules:
    Control.Monad.CatchIO
  Hs-Source-Dirs:  src
  Ghc-options: -Wall
  Extensions:
    ExistentialQuantification,
    ScopedTypeVariables

