Name:            blockio
Version:         0.0-2006-02-03
Author:          Peter Simons <simons@cryp.to>
License:         GPL
License-File:    LICENSE
Maintainer:      simons@cryp.to
Homepage:        http://cryp.to/blockio/
Synopsis:        Block-oriented I/O Driver
Category:        System
Description:     Block-oriented I/O Driver
Build-Depends:   base, mtl, child
Exposed-Modules:
    System.IO.Driver

Extensions:     DeriveDataTypeable
Build-Type:     Simple
Ghc-Options:    -Wall -O2