name:       packedstring
version:    0.1.0.1
cabal-version: >= 1.2
license:    BSD3
license-file:    LICENSE
maintainer:    libraries@haskell.org
synopsis:    (Deprecated) Packed Strings.
description:
    (Deprecated) Packed Strings.
build-type: Simple
Library
  build-depends: base, array
  exposed-modules:
      Data.PackedString
  extensions: CPP

